test/visibility/import/enablesUnqualified/multipleUnqualified/useAndImport-useOnlyNothing1a.good
useAndImport-useOnlyNothing1a.chpl:21: In function 'main':
useAndImport-useOnlyNothing1a.chpl:24: error: 'A' undeclared (first use this function)
